feat(iec104): 实现传输原因枚举与类型标识优化
- 新增 CauseOfTransmission 枚举类，定义各种传输原因标识符
-优化 IEC104_TypeIdentifier 枚举，使用 Optional 返回类型提高安全性
- 修改 IEC104_iFrameMasterHandler，增强遥测数据解析逻辑- 添加 IOA 列表空值检查，避免空指针异常
- 使用 ReferenceCountUtil 管理 ByteBuf 资源，防止内存泄漏
- 更新日志记录格式，提高调试信息可读性
- 在 IEC104Util 中强化类型标识解析，抛出明确异常信息